added style to section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <main>
-        <section>
+        <section style="background: red">
             <h1>Get the freedom you deserve.</h1>
         </section>
     </main>
