--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
 </head>
 
@@ -17,6 +18,7 @@
         </section>
         <section id="plans">
             <h1 class="section-title">Choose Your Plan</h1>
+            <p>Make you get the most for your money!</p>
         </section>
     </main>
 </body>
