--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 <body>
     <header class="main-header">
         <div>
-           <a href="index.html">
+           <a href="index.html" class="main-header__brand">
                uHost
            </a>
         </div>
         <nav class="main-nav">
-            <ul class="main-nav__items>
+            <ul class="main-nav__items">
                 <li class="main-nav__item">
                     <a href="packages/index.html">Packages</a>
                 </li>
